# xlr8

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
rust/xlr8_rust/: Cargo.toml  README.md  pyproject.toml
rust/xlr8_rust/src/: lib.rs
rust/xlr8_rust/src/full_fetch/: mod.rs  types.rs
scripts/: check_version_bump.py
src/xlr8/: rust_backend.py
src/xlr8/analysis/: __init__.py  brackets.py  chunker.py  inspector.py
src/xlr8/collection/: cursor.py  cursor.pyi
src/xlr8/execution/: __init__.py  callback.py  executor.py  planner.py
src/xlr8/schema/: __init__.py  schema.py  types.py
src/xlr8/storage/: __init__.py  reader.py
tests/analysis/: test_brackets.py  test_inspector.py
tests/execution/: test_planner.py
